2001-07-18  Martin Kahlert  <martin.kahlert@infineon.com>

	* java/lang/natClass.cc: Move calls of _Jv_InitClass from
	java::lang::Class::isAssignableFrom and java::lang::Class::isInstance
	into _Jv_IsAssignableFrom

2001-07-18  Tom Tromey  <tromey@redhat.com>

	For PR java/2812:
	* libgcj.spec.in (*lib): Added LIBICONV.
	* Makefile.am (GCJLINK): Added ICONV_LDFLAGS.
	(LIBLINK): Likewise.
	* configure: Rebuilt.
	* configure.in: Call AM_ICONV.  Don't check for iconv function.
	* acinclude.m4 (AM_ICONV): New macro, from Bruno Haible.  Then
	modified to generate ICONV_LDFLAGS.

2001-07-05  Tom Tromey  <tromey@redhat.com>

	For PR java/3562:
	* java/lang/Class.h (Class(void)): Now private.  Removed
	implementation.  From dmorsberger@sensysdl.com.

2001-07-02  Tom Tromey  <tromey@redhat.com>

	Fix for PR bootstrap/3281:
	* aclocal.m4, configure: Rebuilt.
	* acinclude.m4 (LIBGCJ_CONFIGURE): Don't set libgcj_flagbasedir.
	Correctly compute libgcj_basedir.
	(mkinstalldirs): Define and subst.

2001-07-02  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* configure.in (test for eh model): Fixed typo.
	* configure: Rebuilt.
	
20010617 Release Manager

        * GCC 3.0 Released.

2001-06-13  Tom Tromey  <tromey@redhat.com>

	* configure.host: Don't use -fno-use-divide-subroutine on x86.

2001-06-12  Tom Tromey  <tromey@redhat.com>

	* aclocal.m4, configure: Rebuilt.
	* acinclude.m4: Find configure.host in srcdir.

2001-06-10  Alexandre Petit-Bianco  <apbianco@redhat.com>

	* exception.cc (cstdlib): Replaces stdlib.h.
	(_Jv_Throw): Use std::abort().
	(PERSONALITY_FUNCTION): Likewise.

2001-06-08  Tom Tromey  <tromey@redhat.com>

	* configure: Rebuilt.
	* configure.in: Compute new aux dir using `pwd'.

2001-06-07  Tom Tromey  <tromey@redhat.com>

	For PR bootstrap/3075:
	* configure, aclocal.m4, Makefile.am: Rebuilt.
	* configure.in: Pass `--with-auxdir' to subdir configure.  Don't
	call AC_CONFIG_AUX_DIR or AC_CANONICAL_SYSTEM.  Look for unwind.h
	relative to libgcj_basedir.