@@ -25,7 +25,7 @@ details.  */
 #include <java/lang/System.h>
 
 jboolean
-java::io::File::access (jint query)
+java::io::File::_access (jint query)
 {
   char buf[MAX_PATH];
   jsize total = JvGetStringUTFRegion (path, 0, path->length(), buf);
@@ -46,7 +46,7 @@ java::io::File::access (jint query)
 }
 
 jboolean
-java::io::File::stat (jint query)
+java::io::File::_stat (jint query)
 {
   char buf[MAX_PATH];
   jsize total = JvGetStringUTFRegion (path, 0, path->length(), buf);
